Complete author controller

--- a/WebAPI/Dockerfile
+++ b/WebAPI/Dockerfile
@@ -1,7 +1,7 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 80
+EXPOSE 8080
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
@@ -23,4 +23,5 @@ RUN dotnet publish "WebAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:Us
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+RUN mkdir  -p ./wwwroot/Images
 ENTRYPOINT ["dotnet", "WebAPI.dll"]
